@@ -199,11 +199,6 @@ GCC_DEBUG_FLAGS = -Dlint -g3 -O3 -fno-common -fstrict-aliasing \
 # to the end of the "CFLAGS=" line.
 # This variable is not described in X3J11's work.
 #
-# If you want a "gtime" function (a la MACH), add
-#	-DCMUCS
-# to the end of the "CFLAGS=" line
-# This function is not described in X3J11's work.
-#
 # NIST-PCTS:151-2, Version 1.4, (1993-12-03) is a test suite put
 # out by the National Institute of Standards and Technology
 # which claims to test C and Posix conformance.  If you want to pass PCTS, add
