@@ -69,6 +69,8 @@ Unreleased, experimental changes
     For easier maintenance later, some C code has been simplified
     and some lint has been removed.
 
+    The long-obsolete 'gtime' function has been removed.
+
   Changes affecting distribution tarballs
 
     The files checktab.awk and zoneinfo2tdf.pl are now distributed in
